test/Fail/Issue3064.err
Issue3064.agda:11.1-14: error: [CoverageIssue]
Incomplete pattern matching for test. Missing cases:
  test 'a' .snd
  test c
when checking the definition of test
